--- a/README.Rmd
+++ b/README.Rmd
@@ -67,6 +67,7 @@ extract_text(
   system.file(
     "extdata", "imperfect-forward-secrecy-ccs15.pdf", package="pdfbox"
   )
-) -> txt
-str(stringi::stri_split_lines(txt))
+) -> pg_df
+
+dplyr::glimpse(pg_df)
 ```
