cloc; code of conduct

--- a/README.Rmd
+++ b/README.Rmd
@@ -44,6 +44,7 @@ The following functions are implemented:
 
 - `extract_uris`:	Extract URI annotations from a PDF document
 - `extract_text`:	Extract text from a PDF document
+- `pdf_info`:	Retrieve PDF Metadata
 
 ## Installation
 
@@ -96,3 +97,14 @@ extract_text(
 
 dplyr::glimpse(pg_df)
 ```
+
+### pdfbox Metrics
+
+```{r echo=FALSE}
+cloc::cloc_pkg_md()
+```
+
+## Code of Conduct
+
+Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). 
+By participating in this project you agree to abide by its terms.
